--- a/views/hello.handlebars
+++ b/views/hello.handlebars
@@ -24,7 +24,11 @@
 			<h1>Hello, {{name}}!</h1>
 		</div>
 	</div>
-
+    <ol>
+    {{#each projects}}
+      <li><a href="#{{id}}">{{name}}</a></li>
+    {{/each}}
+    </ol>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
